# headunit-revived

./: .gitignore  CHANGELOG.md  README.md  gradle.properties
app/: CMakeLists.txt  build.gradle.kts  multidex-config.pro  proguard-project.txt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: CHANGELOG.md
app/src/main/jni/: hu_jni.c  hu_ssl.c  hu_ssl.h
app/src/main/res/anim/: slide_in_left.xml  slide_in_right.xml  slide_out_left.xml  slide_out_right.xml
app/src/main/res/drawable/: bg_pill_translucent.xml  gradient_blue.xml  gradient_darkblue.xml  gradient_orange.xml  gradient_purple.xml  ic_arrow_down.xml  ic_chevron_left_white.xml  ic_launch_white.xml  ic_network_wifi_white.xml  ic_settings_white.xml  ic_usb_white.xml  ic_warning_white.xml
app/src/main/res/drawable-anydpi-v24/: ic_stat_aa.xml
app/src/main/res/layout/: activity_headunit.xml  activity_main.xml  activity_settings.xml  dialog_audio_offsets.xml  dialog_safety_disclaimer.xml  fragment_about.xml  fragment_auto_connect.xml  fragment_home.xml  fragment_keymap.xml  fragment_list.xml  fragment_settings.xml  item_auto_connect.xml  layout_setting_item.xml  layout_setting_item_slider.xml  layout_setting_item_toggle.xml
app/src/main/res/layout-port/: fragment_home.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-cs/: arrays.xml  strings.xml
app/src/main/res/values-de/: arrays.xml  strings.xml
app/src/main/res/values-es/: arrays.xml  strings.xml
app/src/main/res/values-es-rES/: strings.xml
app/src/main/res/values-hu/: arrays.xml  strings.xml
app/src/main/res/values-nl/: arrays.xml  strings.xml
app/src/main/res/values-pl/: arrays.xml  strings.xml
app/src/main/res/values-pt-rBR/: arrays.xml  strings.xml
(+84 files in other folders)
